#48 Fix issues of rating widget on mobile

--- a/public/styles/dark.scss
+++ b/public/styles/dark.scss
@@ -220,4 +220,9 @@
   div.ant-popover-inner {
     background: var(--dark-popover-background);
   }
+
+  div.ant-tooltip-inner,
+  div.ant-tooltip-arrow::before {
+    background: var(--dark-popover-background);
+  }
 }
